# box-apps

./: README.md
box-citrix/: Containerfile  README.md  build-distrobox.sh  build-toolbox.sh  download-icaclient.sh  export-tbox.sh
box-citrix/container/: download-icaclient.sh  download-zoom.sh
box-dev-java/: Containerfile  build-distrobox.sh  build-toolbox.sh  sdkman.sh
box-dev-java/alxclipse/: org.eclipse.setup
box-dev-java/container/: configure-container.sh  packages.ubuntu
box-dev-java/container/alxclipse/: AlxProducts.setup  Alxclipse.setup
box-ib-tws/: Containerfile  README.md  build-distrobox.sh  build-toolbox.sh  cleanup.sh  configure-container.sh  extra-packages
box-ib-tws/container/: download-ib-tws.sh
box-kdb/: Containerfile  build-toolbox.sh
box-kdb/container/: configure-container.sh  packages.ubuntu
box-nix/: .rebuild.sh.swp  VM-notes.txt  box-home.nix  rebuild.sh
box-nix/resources/: Login.keyring  box-home.nix  dbox-nix-vscode-aut.desktop  dbox-nixbox-vscode-aut.desktop
box-nixos/: build.sh  insert_imports.sh  setup_box.sh
box-nixos/dotfiles/: home.nix
box-ubuntu-nix/: Containerfile  build-distrobox.sh  build-toolbox.sh
box-ubuntu-nix/container/: packages.ubuntu
common/: create-desktop-entry.sh  ptyxis-profile.sh
devc/devcontainer-jupyter/: README.md  mise.toml  pyproject.toml
devc/devcontainer-jupyter/.devcontainer/: devcontainer.json
devc/devcontainer-python/: main.py  pyproject.toml
devcontainer-min/: mise.toml
ibkr-docker/: compose-spec  compose.sh  vnc-client.sh
(+6 files in other folders)
