[project]
name = "devcontainer-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.8.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mosek>=11.0.29",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
    "selenium>=4.38.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "jupytext>=1.18.1",
    "pytest>=9.0.1",
]
